brat/test/golden/error/unreachablebranch.brat
f(n :: Nat) -> []
f(x) = []
f(0) = []
